22-05-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Implementing automatic naming for output files in the
	  Sensitivity studies
	* Fixing weight problem for the D5 sample

21-05-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Adding TMVA classes for sensitivity studies
	* Adding jet efficiency plots as function of mu
	* Adding micro tree for sensitivity studies with TMVA
	* Adding flag for multithreading
	* Added loop to produce all jet efficiency plots in one go
	* Added automatic output filename string

21-04-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Adding profiling plot for the number of jets as function of N_PV
	  for both jets and jets with jvf accepted
	* Added TTree to perform sensitivity optimization cuts
	* Addin AtlasStyle macros to the package
	* Adding SensitivityCuts.cxx macro to study the optimal set of
	  cuts for signal efficiency

09-04-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Changed m_jet.m_jet_isbad to m_jet.m_jet_isnotbad
	* Added commpressed spectra samples
	* Added JVF accepted efficiency plots

01-04-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Adding plotJetEfficiency macro to plot nice plots
	* Improved EventFilter with more proper cuts
	* Improved handling of sample weight and different input samples
	* Tagging MiniReader-00-00-03

30-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Added Znunu cuts and cut Flow functions
	* Correcting the logic of the jet efficency plots

25-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Adding Jet efficency plots

19-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Tagging MiniReader-00-00-01
	* Adding MiniReaderSelectionCuts to define cuts
	* Adding MiniReaderAuxFunctions containing auxiliary functions
	* Adding DefineSR defining the signal regions cuts
	* Adding MiniReaderEventFilter to filter events
	* Adding skeleton to produse the jetEfficency plot

18-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Added MiniReaderElectron class
	* Added MiniReaderMuon class
	* Added MiniReaderMissingET class