@@ -1,0 +1,13 @@
+#include "MiniReader/MiniReaderCutFlow.h"
+
+MiniReaderCutFlow::MiniReaderCutFlow() :
+  m_n_bad_jets(0),
+  m_met_cut(0),
+  m_jet1_pt(0),
+  m_ele_mult_cut(0),
+  m_mu_mult_cut(0),
+  m_n_jet_cut(0),
+  m_dphi_jetmet_cut(0),
+  m_met_hard_cut(0),
+  m_jet1_pt_hard_cut(0)
+{}
